--- a/open-source.html
+++ b/open-source.html
@@ -20,11 +20,15 @@
     </div>
 </div>
 
-<div class="section">
+<div class="section mt-32">
     <h3 class="section-header">
         Introduction
     </h3>
     <iframe class="aspect-video max-w-screen-lg w-full" src="https://www.youtube.com/embed/Ki5CEMwllTQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<div class="my-16 flex flex-row justify-center w-screen">
+    <div class="w-full h-2 bg-slate-300 max-w-screen-xl"></div>
 </div>
 
 <div class="section">
@@ -38,6 +42,10 @@
         disastrous
         effects of issues in dependencies.
     </p>
+</div>
+
+<div class="my-16 flex flex-row justify-center w-screen">
+    <div class="w-full h-2 bg-slate-300 max-w-screen-xl"></div>
 </div>
 
 <div class="section">
@@ -60,6 +68,11 @@
         </figure>
     </div>
 </div>
+
+<div class="my-16 flex flex-row justify-center w-screen">
+    <div class="w-full h-2 bg-slate-300 max-w-screen-xl"></div>
+</div>
+
 <div class="section">
     <h3 class="section-header">
         Google&#39;s Open Source Maintenance Crew
@@ -82,8 +95,12 @@
     </p>
 </div>
 
-<div class="flex justify-center mt-32 mb-6">
-    <h3 class="section-header">
+<div class="my-16 flex flex-row justify-center w-screen">
+    <div class="w-full h-2 bg-slate-300 max-w-screen-xl"></div>
+</div>
+
+<div class="flex justify-center  mb-6">
+    <h3 class="section-header text-6xl">
         Solutions
     </h3>
 </div>
@@ -102,8 +119,9 @@
                 This
                 is not feasible however, as many projects do not want to or can not change to a copyleft license.
             </p>
+            <img class="p-4" src="gnu.png" alt="gnu">
         </div>
-        <div class="bg-gray-800 h-full ml-4">
+        <div class="bg-gray-800 h-full ml-4 flex flex-col">
             <h3 class="section-header text-white text-center mt-4">
                 Government intervention
             </h3>
@@ -113,9 +131,15 @@
                 instead provide incentives for open source developers and companies which contribute back to open source
                 projects.
             </p>
+            <img class="w-full" src="signing.webp" alt="president signing paper">
         </div>
     </div>
 </div>
+
+<div class="my-16 flex flex-row justify-center w-screen">
+    <div class="w-full h-2 bg-slate-300 max-w-screen-xl"></div>
+</div>
+
 <div class="section">
     <h2 class="section-header">
         AP Seminar Reflection
