Added all images

--- a/open-source.html
+++ b/open-source.html
@@ -7,7 +7,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <body>
-<div class="h-screen flex flex-col justify-center bg-cover" style="background-image: url(mountain.jpg)">
+<div class="h-screen flex flex-col justify-center bg-cover" style="background-image: url(imgs/mountain.jpg)">
     <div class="text-8xl font-extrabold flex justify-center">
         <span class="bg-clip-text text-transparent bg-gradient-to-r from-sky-500 to-blue-500 backdrop-blur-sm">
             Open Source Software
@@ -28,7 +28,7 @@
 </div>
 
 <div class="my-16 flex flex-row justify-center w-screen">
-    <div class="w-full h-2 bg-slate-300 max-w-screen-xl"></div>
+    <div class="split"></div>
 </div>
 
 <div class="section">
@@ -42,10 +42,11 @@
         disastrous
         effects of issues in dependencies.
     </p>
+    <img class="mt-4" src="imgs/log4shell.png" alt="log4shell">
 </div>
 
 <div class="my-16 flex flex-row justify-center w-screen">
-    <div class="w-full h-2 bg-slate-300 max-w-screen-xl"></div>
+    <div class="split"></div>
 </div>
 
 <div class="section">
@@ -70,7 +71,7 @@
 </div>
 
 <div class="my-16 flex flex-row justify-center w-screen">
-    <div class="w-full h-2 bg-slate-300 max-w-screen-xl"></div>
+    <div class="split"></div>
 </div>
 
 <div class="section">
@@ -93,10 +94,11 @@
         in the open source projects they utilize. Given open source code’s massive economic benefits and usage, more
         returned support is expected.
     </p>
+    <img class="mt-4 w-full max-w-screen-lg" src="imgs/google.webp" alt="google logo">
 </div>
 
 <div class="my-16 flex flex-row justify-center w-screen">
-    <div class="w-full h-2 bg-slate-300 max-w-screen-xl"></div>
+    <div class="split"></div>
 </div>
 
 <div class="flex justify-center  mb-6">
@@ -119,7 +121,7 @@
                 This
                 is not feasible however, as many projects do not want to or can not change to a copyleft license.
             </p>
-            <img class="p-4" src="gnu.png" alt="gnu">
+            <img class="p-4" src="imgs/gnu.png" alt="gnu">
         </div>
         <div class="bg-gray-800 h-full ml-4 flex flex-col">
             <h3 class="section-header text-white text-center mt-4">
@@ -131,13 +133,13 @@
                 instead provide incentives for open source developers and companies which contribute back to open source
                 projects.
             </p>
-            <img class="w-full" src="signing.webp" alt="president signing paper">
+            <img class="w-full" src="imgs/signing.webp" alt="president signing paper">
         </div>
     </div>
 </div>
 
 <div class="my-16 flex flex-row justify-center w-screen">
-    <div class="w-full h-2 bg-slate-300 max-w-screen-xl"></div>
+    <div class="split"></div>
 </div>
 
 <div class="section">
