--- a/open-source.html
+++ b/open-source.html
@@ -108,7 +108,7 @@
 </div>
 <div class="flex justify-center">
     <div class="grid grid-cols-2 max-w-screen-lg items-start">
-        <div class="bg-gray-800 h-full mr-4">
+        <div class="bg-gray-800 h-full mr-4 rounded-lg">
             <h3 class="section-header text-center text-white mt-4">
                 Promoting GPL/LGPL
             </h3>
@@ -123,7 +123,7 @@
             </p>
             <img class="p-4" src="imgs/gnu.png" alt="gnu">
         </div>
-        <div class="bg-gray-800 h-full ml-4 flex flex-col">
+        <div class="bg-gray-800 h-full ml-4 flex flex-col rounded-lg">
             <h3 class="section-header text-white text-center mt-4">
                 Government intervention
             </h3>
@@ -176,6 +176,25 @@
         After high school I plan on majoring in computer science. While I have not decided which part of computer
         science I want to explore, I am highly interested in computer vision and artificial intelligence.
     </p>
+
+    <h4 class="section-header my-4">
+        Papers I've Written in AP Seminar
+    </h4>
+
+    <div class="grid grid-cols-2 gap-4 items-start w-full max-w-screen-lg">
+        <div class="paper-box">
+            <a href="notlucam.github.io/papers/irr1.pdf"> IRR 1 </a>
+        </div>
+        <div class="paper-box">
+            <a href="notlucam.github.io/papers/iwa1.pdf"> IWA 1 </a>
+        </div>
+        <div class="paper-box">
+            <a href="notlucam.github.io/papers/irr2.pdf"> IRR 2 </a>
+        </div>
+        <div class="paper-box">
+            <a href="notlucam.github.io/papers/iwa2.pdf"> IWA 2 </a>
+        </div>
+    </div>
 </div>
 
 <script>
