--- a/open-source.html
+++ b/open-source.html
@@ -183,16 +183,16 @@
 
     <div class="grid grid-cols-2 gap-4 items-start w-full max-w-screen-lg">
         <div class="paper-box">
-            <a href="notlucam.github.io/papers/irr1.pdf"> IRR 1 </a>
+            <a href="papers/irr1.pdf"> IRR 1 </a>
         </div>
         <div class="paper-box">
-            <a href="notlucam.github.io/papers/iwa1.pdf"> IWA 1 </a>
+            <a href="papers/iwa1.pdf"> IWA 1 </a>
         </div>
         <div class="paper-box">
-            <a href="notlucam.github.io/papers/irr2.pdf"> IRR 2 </a>
+            <a href="papers/irr2.pdf"> IRR 2 </a>
         </div>
         <div class="paper-box">
-            <a href="notlucam.github.io/papers/iwa2.pdf"> IWA 2 </a>
+            <a href="papers/iwa2.pdf"> IWA 2 </a>
         </div>
     </div>
 </div>
