--- a/open-source.html
+++ b/open-source.html
@@ -24,7 +24,10 @@
     <h3 class="section-header my-4">
         Introduction
     </h3>
-    <iframe class="aspect-video max-w-screen-lg w-full" src="https://www.youtube.com/embed/Ki5CEMwllTQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="aspect-video max-w-screen-lg w-full" src="https://www.youtube.com/embed/Ki5CEMwllTQ"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
 </div>
 
 <div class="my-16 flex flex-row justify-center w-screen">
@@ -128,7 +131,8 @@
                 Government intervention
             </h3>
             <p class="main-text text-white mx-4 my-4">
-                Although the government has acted to aid this issue, these are not enough and too slow. The government ought
+                Although the government has acted to aid this issue, these are not enough and too slow. The government
+                ought
                 to
                 instead provide incentives for open source developers and companies which contribute back to open source
                 projects.
@@ -136,6 +140,40 @@
             <img class="w-full" src="imgs/signing.webp" alt="president signing paper">
         </div>
     </div>
+</div>
+
+<div class="my-16 flex flex-row justify-center w-screen">
+    <div class="split"></div>
+</div>
+
+<div class="section">
+    <h3 class="section-header">
+        Credits
+    </h3>
+    <p class="main-text">
+        Spencer, T. (n.d.). Image of Log4J. Curity's Rapid Response to Log4Shell Vulnerability. Retrieved June 1, 2022,
+        from https://curity.io/blog/curitys-rapid-response-to-log4shell-vulnerability/.
+    </p>
+    <p class="main-text">
+        Lakshmanan, R. (n.d.). Google Logo. Google Created 'Open Source Maintenance Crew' to Help Secure Critical
+        Projects. Retrieved from https://thehackernews.com/2022/05/google-created-open-source-maintenance.html.
+    </p>
+    <p class="main-text">
+        Biden signing executive order. (n.d.). Biden plans executive order to force the government to buy more products
+        made in the US. Retrieved from
+        https://www.businessinsider.com/biden-to-sign-executive-order-to-boost-us-manufacturing-2021-1.
+    </p>
+    <p class="main-text">
+        Heckert, A. A. (n.d.). Gnu Mascot. Heckert GNU white. Retrieved from
+        https://en.wikipedia.org/wiki/GNU_Project#/media/File:Heckert_GNU_white.svg.
+    </p>
+    <p class="main-text">
+        Mountain Background. (n.d.). Mountains. Retrieved from https://www.pexels.com/search/mountains/.
+    </p>
+    <p class="main-text">
+        Synopsis. (2022). 2022 open source security and risk analysis report.
+        https://www.synopsys.com/content/dam/synopsys/sig-assets/reports/rep-ossra-2022.pdf
+    </p>
 </div>
 
 <div class="my-16 flex flex-row justify-center w-screen">
@@ -177,6 +215,8 @@
         science I want to explore, I am highly interested in computer vision and artificial intelligence.
     </p>
 
+    <br>
+    
     <h4 class="section-header my-4">
         Papers I've Written in AP Seminar
     </h4>
@@ -206,7 +246,9 @@
     </div>
 </div>
 
-<br>
+<div class="my-16 flex flex-row justify-center w-screen">
+    <div class="split"></div>
+</div>
 
 <script>
     const labels = [
